<resources>
    <string name="app_name">Comasy</string>
    <string name="transitionMemberRegistrationButtonText">新規会員登録はこちら</string>
    <string name="MemberRegistrationTitleText">新規会員登録</string>
    <string name="mailAddressText">メールアドレス</string>
    <string name="transitionMemberRegistrationFormButtonText">仮登録</string>
    <string name="passwordText">パスワード</string>
    <string name="loginText">ログイン</string>
    <string name="userNameText">ニックネーム</string>
    <string name="reEnterPasswordText">パスワード（再入力）</string>
    <string name="tokenText">認証コード</string>
    <string name="transitionMemberRegistrationConfirmActivityButtonText">次へ</string>
    <string name="errorPasswordText">パスワードが違います！\nパスワードを再入力してください</string>
    <string name="RegistrationActivity">中身登録</string>
    <string name="ImageRegistration">写真登録</string>
    <string name="ImageChange">写真変更</string>
    <string name="transitionLoginActivityButtonText">登録</string>
    <string name="TermsOfServiceText">利用規約</string>
    <string name="settingTitleText">設定</string>
    <string name="Blank" />
    <string name="PrivacyPolicyText">プライバシーポリシー</string>
    <string name="ReviewText">レビュー/評価</string>
    <string name="customizeText">画面カスタマイズ</string>
    <string name="logoutText">ログアウト</string>
    <string name="cat01_btnText">野 菜</string>
    <string name="cat02_btnText">飲 料</string>
    <string name="cat03_btnText">肉 類</string>
    <string name="cat04_btnText">魚 介 類</string>
    <string name="cat05_btnText">デ ザ ー ト</string>
    <string name="cat06_btnText">調 味 料</string>
    <string name="cat07_btnText">主 食</string>
    <string name="cat08_btnText">そ の 他</string>
    <string name="memo">メモ</string>
    <string name="backButton"><![CDATA[< 戻る]]></string>
    <string name="momoTextHint">タイトルを入力</string>
    <string name="newMemo">新規メモ作成</string>
    <string name="memoTextTitle">タイトルを入力</string>
    <string name="save">保存</string>
    <string name="testButton">test</string>
    <string name="extBoxHint" />
    <string name="memoTextBoxHint">128文字まで入力できます</string>
    <string name="searchGoodshint">食材、キーワードを入力</string>
    <string name="cat00_btnText">A L L</string>
    <string name="sampleRecipiText">▲詰め物トマトのオーブン焼き</string>
    <string name="sampleButton">オススメ</string>
    <string name="sampleButton2">定番</string>
    <string name="potText">旬</string>
    <string name="TitleText">タイトル</string>
    <string name="MemoDetailText">詳細</string>
    <string name="changeText">冷蔵庫切り替え/招待</string>
    <string name="columns">コラム一覧</string>
    <string name="sendPictureText">送信</string>
    <string name="columnTitleText">コラム一覧</string>
    <string name="clm1_title">冷蔵庫のお手入れ</string>
    <string name="clm1_contents">掃除の際は電気を落とす必要があるため、中の食材をできるだけ少ない状態で行いましょう。\n中性洗剤を含ませた布で壁面を拭きます。その後、水拭きを行います。空拭きも加えると効果的です。卵ラックや肉ケース、ドアポケットなどは汚れやすいので特に注意しましょう。\n月に１回など、定期的に掃除を行うことが大切です。</string>
    <string name="clm2_title">冷蔵庫の日</string>
    <string name="clm2_contents">梅雨から夏にかけて冷蔵庫が活躍することから、夏至の日にあたることの多い6月21日が「冷蔵庫の日」と決められました。\nこれは日本電機工業会（JEMA）によって制定された日であり、「冷蔵庫の日」特設サイトも公開されています。\nhttps://www.reizoukonohi-cp.jp/</string>
    <string name="clm3_title">冷蔵庫の気になる音</string>
    <string name="clm3_contents">冷蔵庫の音が大きく、気になってしまう方も少なくないでしょう。冷蔵庫にはコンプレッサーが内蔵されており、特定の振動数で動いています。この振動数に合わせて音が出ないように設計されているので、基本的には静かです。\nしかし、それでも気になる音が出ている場合は、部屋の構造やそもそもの設置場所によって音が大きくなっているかもしれません。とれる対策は冷蔵庫の位置をずらす。また、近くのものをどかすことです。\n他にも霜の付着による音の可能性もあるので、お手入れは欠かさず行いましょう。\n</string>
    <string name="clm4_title">冷蔵室と野菜室</string>
    <string name="clm4_contents">それぞれの部屋の主な違いは温度、そして湿度の２つです。\nメーカーや機種にもよりますが、冷蔵室は２℃～６℃、野菜室は３℃～８℃くらいに設定されています。湿度は野菜室のほうが高くなっており、野菜の鮮度を保ちます。（野菜によっては入れない方がいいものも…？）\nただ、野菜室の湿度は機種によって差が大きいため、気になる場合は調べましょう。</string>
    <string name="clm5_title">更新をお待ちください</string>
    <string name="clm5_contents">Coming Soon...</string>
    <string name="clm6_title">更新をお待ちください</string>
    <string name="clm6_contents">Coming Soon...</string>
    <string name="TagText">▼▼　人気のタグから探す　▼▼</string>
    <string name="searchRefrigeratorItemText">▶ ▶ 登録アイテムから探す ◀ ◀\n</string>
</resources>